--- a/Skeleton/style.css
+++ b/Skeleton/style.css
@@ -10,3 +10,21 @@ body,
 html {
   height: 100%;
 }
+
+
+.legend {
+  line-height: 20px;
+  padding: 5px;
+  color: rgb(236, 233, 233);
+  background: rgb(0,0,0,0.7) ;
+  border-radius: 5%;
+}
+.legend i {
+  width: 20px;
+  height: 20px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+  background: black
+  border-radius: 1px;
+}
