--- a/Skeleton/style.css
+++ b/Skeleton/style.css
@@ -28,3 +28,13 @@ html {
   background: black
   border-radius: 1px;
 }
+
+.leaflet-bottom.leaflet-left{
+width: 100%;
+}
+.leaflet-control-container .leaflet-timeline-controls{
+box-sizing: border-box;
+width: 100%;
+margin: 0;
+margin-bottom: 15px;
+}
